--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@master
       - name: PHP
-        uses: bruceCzK/gh-action-php
+        uses: bruceCzK/gh-action-php@master
       - name: Run
         run: |
           if [ '${{ secrets.BDUSS }}' != '' ]; then sed -i "s/xxxxx/${{ secrets.BDUSS }}/" tieba.php; fi
